--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.e7afe.js" charset="utf-8"></script>
+<script src="src/settings.ec6bf.js" charset="utf-8"></script>
 
-<script src="main.4ca3b.js" charset="utf-8"></script>
+<script src="main.faaa3.js" charset="utf-8"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
   <script src="TONconnect0816b1.js" charset="utf-8"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -88,7 +88,7 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.c4d1c.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.87e2d.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
         loadScript(debug ? 'physics.js' : 'physics-min.ad9a7.js', window.boot);
       }
