--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.ec6bf.js" charset="utf-8"></script>
+<script src="src/settings.85d2d.js" charset="utf-8"></script>
 
-<script src="main.faaa3.js" charset="utf-8"></script>
+<script src="main.b72b6.js" charset="utf-8"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
   <script src="TONconnect0816b1.js" charset="utf-8"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -73,7 +73,6 @@
     document.body.style.height = window.innerHeight + overflow + "px"
     document.body.style.paddingBottom = `${overflow}px`
     window.scrollTo(0, overflow)
-    
 
     function loadScript (moduleName, cb) {
       function scriptLoaded () {
