--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.e7afe.js" charset="utf-8"></script>
+<script src="src/settings.b11ed.js" charset="utf-8"></script>
 
-<script src="main.4ca3b.js" charset="utf-8"></script>
+<script src="main.1a7bf.js" charset="utf-8"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
   <script src="TONconnect0816b1.js" charset="utf-8"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -64,7 +64,7 @@
     var debug = window._CCSettings.debug;
     var splash = document.getElementById('splash');
     splash.style.display = 'block';
-    
+
     var ton = new TONconnect();
     window.Telegram.WebApp.expand();
     const overflow = 10
@@ -74,7 +74,6 @@
     document.body.style.paddingBottom = `${overflow}px`
     window.scrollTo(0, overflow)
     
-
     function loadScript (moduleName, cb) {
       function scriptLoaded () {
           document.body.removeChild(domScript);
@@ -88,7 +87,7 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.c4d1c.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.87e2d.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
         loadScript(debug ? 'physics.js' : 'physics-min.ad9a7.js', window.boot);
       }
