--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.b11ed.js" charset="utf-8"></script>
+<script src="src/settings.17615.js" charset="utf-8"></script>
 
-<script src="main.1a7bf.js" charset="utf-8"></script>
+<script src="main.4e1d2.js" charset="utf-8"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
   <script src="TONconnect0816b1.js" charset="utf-8"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -65,7 +65,7 @@
     var splash = document.getElementById('splash');
     splash.style.display = 'block';
 
-    var ton = new TONconnect();
+	var ton = new TONconnect();
     window.Telegram.WebApp.expand();
     const overflow = 10
     document.body.style.overflowY = 'hidden'
