--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.17615.js" charset="utf-8"></script>
+<script src="src/settings.38d32.js" charset="utf-8"></script>
 
-<script src="main.4e1d2.js" charset="utf-8"></script>
+<script src="main.b7e6d.js" charset="utf-8"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
   <script src="TONconnect0816b1.js" charset="utf-8"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -64,8 +64,8 @@
     var debug = window._CCSettings.debug;
     var splash = document.getElementById('splash');
     splash.style.display = 'block';
-
-	var ton = new TONconnect();
+    
+    var ton = new TONconnect();
     window.Telegram.WebApp.expand();
     const overflow = 10
     document.body.style.overflowY = 'hidden'
@@ -73,7 +73,7 @@
     document.body.style.height = window.innerHeight + overflow + "px"
     document.body.style.paddingBottom = `${overflow}px`
     window.scrollTo(0, overflow)
-    
+
     function loadScript (moduleName, cb) {
       function scriptLoaded () {
           document.body.removeChild(domScript);
